@@ -1,6 +1,5 @@
 package com.rosemods.windswept.client.model;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
 import net.minecraft.client.model.HumanoidModel;
@@ -8,6 +7,8 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.geom.PartPose;
 import net.minecraft.client.model.geom.builders.*;
 import net.minecraft.world.entity.LivingEntity;
+
+import java.util.List;
 
 public class AntlerHelmetModel extends HumanoidModel<LivingEntity> {
     public static final AntlerHelmetModel INSTANCE = new AntlerHelmetModel(createBodyLayer().bakeRoot());
@@ -36,7 +37,7 @@ public class AntlerHelmetModel extends HumanoidModel<LivingEntity> {
 
     @Override
     protected Iterable<ModelPart> headParts() {
-        return ImmutableList.of(this.helmet);
+        return List.of(this.helmet);
     }
 
 }
